--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,16 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Searchbar {
+  height: 40px;
+  font-size: 30px;
+  border: solid 3px greenyellow;
+}
+
+.button {
+  height: 42px;
+  font-size: 30px;
+  background: greenyellow;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -15,7 +22,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
